--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,9 @@ jobs:
       - name: Install dependencies
         run: python3 -m pip install -r ./requirements.txt
 
-      - run: mkdocs build
+      - name: Pelican Build
+        run: |
+          make publish
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
